# raycaster

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.c  demo.bat  tests.bat
demo/: main.c
demo8/: main.c
src/: camera.c  level_data.c  light.c  linedef.c  map_cache.c  renderer.c  sector.c
src/include/: camera.h  entity.h  level_data.h  light.h  linedef.h  macros.h  map_cache.h  maths.h  renderer.h  sector.h  texture.h  types.h  vertex.h
src/include/types/: vec2.h  vec3.h
src/map_builder/: map_builder.c  polygon.c
src/map_builder/include/: map_builder.h  polygon.h
tests/: asserts.h  level_data.c  main.c  map_builder.c  math.c  polygon.c  sector.c
